conversation controller
